--- a/Pagina-1.html
+++ b/Pagina-1.html
@@ -59,7 +59,7 @@
     </header>
       
     <center>
-        <div id="results" class="results" style="margin-left: 430px;"></div>
+        <div id="results" class="results"></div>
     </center> 
 
     </div>
