--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="u-container-align-center-xs u-container-style u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-3" data-href="#" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
-                <h6 class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-text u-text-5"><span class="u-file-icon u-icon u-icon-3"><img src="images/5229336.png" alt=""></span>Coming soon...&nbsp;<br>
+                <h6 class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-text u-text-5"><span class="u-file-icon u-icon u-icon-3"><img src="images/1179120.png" alt=""></span>Random Selection&nbsp;<br>
                 </h6>
               </div>
             </div>
@@ -222,4 +222,5 @@
         <a href="Pagina-1.html" class="u-border-none u-btn u-button-style u-grey-10 u-hover-grey-90 u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="1000" data-animation-direction="">START HERE </a>
       </div>
     </section>
-</body></html>
+</body>
+</html>
