--- a/description.html
+++ b/description.html
@@ -23,27 +23,29 @@
         </div>
     </header>
 
-    <section class="u-align-center u-black u-clearfix u-section-1" id="sec-db91">
-        <div class="u-clearfix u-sheet u-sheet-1">
-            <div class="custom-expanded data-layout-selected u-clearfix u-layout-wrap u-layout-wrap-1">
-                <div class="u-layout">
-                    <div class="u-layout-row">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <img id="movie-poster" class="u-image u-image-default u-preserve-proportions u-image-1" src="#" alt="Poster">
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="u-align-left u-black u-container-style u-layout-cell u-size-31-lg u-size-31-xl u-size-60-md u-size-60-sm u-size-60-xs u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                                        <div class="u-container-layout u-container-layout-2" id="resultsFilm">
-                                            <h1 id="movie-title" class="u-text u-text-2">Loading...</h1>
-                                            <h6 id="movie-year" class="u-text u-text-3">Year: N/A</h6>
-                                            <h6 id="movie-rated" class="u-text u-text-4">Rated: N/A</h6>
-                                            <h6 id="movie-genre" class="u-text u-text-5">Genre: N/A</h6>
-                                            <h6 id="movie-runtime" class="u-text u-text-6">Runtime: N/A</h6>
-                                            <h6 id="movie-language" class="u-text u-text-7">Language: N/A</h6>
-                                            <p id="movie-plot" class="u-text u-text-9">Plot:<br>Loading...</p>
-                                            <div id="trailer-container" class="ml-4 mt-1"></div>
+    <main>
+        <section class="u-align-center u-black u-clearfix u-section-1" id="sec-db91">
+            <div class="u-clearfix u-sheet u-sheet-1">
+                <div class="custom-expanded data-layout-selected u-clearfix u-layout-wrap u-layout-wrap-1">
+                    <div class="u-layout">
+                        <div class="u-layout-row">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <img id="movie-poster" class="u-image u-image-default u-preserve-proportions u-image-1" src="#" alt="Poster">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="u-align-left u-black u-container-style u-layout-cell u-size-31-lg u-size-31-xl u-size-60-md u-size-60-sm u-size-60-xs u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
+                                            <div class="u-container-layout u-container-layout-2" id="resultsFilm">
+                                                <h1 id="movie-title" class="u-text u-text-2">Loading...</h1>
+                                                <h6 id="movie-year" class="u-text u-text-3">Year: N/A</h6>
+                                                <h6 id="movie-rated" class="u-text u-text-4">Rated: N/A</h6>
+                                                <h6 id="movie-genre" class="u-text u-text-5">Genre: N/A</h6>
+                                                <h6 id="movie-runtime" class="u-text u-text-6">Runtime: N/A</h6>
+                                                <h6 id="movie-language" class="u-text u-text-7">Language: N/A</h6>
+                                                <p id="movie-plot" class="u-text u-text-9">Plot:<br>Loading...</p>
+                                                <div id="trailer-container" class="ml-4 mt-1"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -52,8 +54,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <script>
         // Event Listener che si attiva appena la pagina viene caricata
